--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,18 +7,26 @@
         android:icon="@mipmap/ic_logo_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".CadastroActivity"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/label_login" />
+        <activity
+            android:name=".CadastroActivity"
+            android:label="@string/label_cadastro" />
+        <activity
+            android:name=".EscolhaCadOuLoginActivity"
+            android:label="@string/label_escolha" />
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
