Inicio da organizacao em camadas e comeco da implementacao do login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".usuario.gui.LoginActivity"
             android:label="@string/label_login" />
         <activity
-            android:name=".CadastroActivity"
+            android:name=".usuario.gui.CadastroActivity"
             android:label="@string/label_cadastro" />
         <activity
             android:name=".EscolhaCadOuLoginActivity"
