Primeiros fragments na tela com menu (sem os tabs primeiro)
*para ser mais organizado no entendimento

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
             android:name=".usuario.usuario.gui.EscolhaCadOuLoginActivity"
             android:label="@string/label_escolha" />
         <activity android:name=".usuario.titulos.gui.HomeActivity" />
+        <activity
+            android:name=".TelaComMenuActivity"
+            android:label="@string/title_activity_tela_com_menu"
+            android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 
 </manifest>
