--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:theme="@style/AppTheme">
 
         </activity>
+        <activity
+            android:name=".titulos.gui.MainScreenActivity"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
