--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/label_escolha" />
         <activity
             android:name=".titulos.gui.TelaComMenuActivity"
-            android:label="@string/title_activity_tela_com_menu"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme">
 
         </activity>
