--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,14 @@
             android:label="@string/label_escolha" />
         <activity
             android:name=".titulos.gui.TelaComMenuActivity"
-            android:label="@string/title_activity_tela_com_menu"
-            android:theme="@style/AppTheme">
-
-        </activity>
+            android:label=""
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".titulos.gui.MainScreenActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
+        <activity android:name=".usuario.gui.ConfiguracaoActivity" />
+        <activity android:name=".titulos.gui.RecomendacoesActivity" />
+        <activity android:name=".CalendarioActivity"></activity>
     </application>
 
 </manifest>
