--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
         </activity>
         <activity
             android:name=".titulos.gui.MainScreenActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
+        <activity android:name=".usuario.gui.ConfiguracoesActivity"
+            android:label="@string/label_configuracoes">
+
+        </activity>
     </application>
 
 </manifest>
