--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,16 +29,14 @@
         <activity
             android:name=".titulos.gui.TelaComMenuActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".titulos.gui.MainScreenActivity"
             android:label="@string/app_name" />
-        <activity android:name=".usuario.gui.ConfiguracoesActivity"
-            android:label="@string/label_configuracoes">
-
-        </activity>
+        <activity
+            android:name=".usuario.gui.ConfiguracoesActivity"
+            android:label="@string/label_configuracoes"></activity>
+        <activity android:name=".usuario.gui.tela_mostrar_nome"></activity>
     </application>
 
 </manifest>
