--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.apphamba.hamba">
 
     <application
+        android:name=".infra.Sessao"
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo_launcher"
         android:label="@string/app_name"
@@ -29,14 +30,19 @@
         <activity
             android:name=".titulos.gui.TelaComMenuActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity
             android:name=".titulos.gui.MainScreenActivity"
             android:label="@string/app_name" />
         <activity
             android:name=".usuario.gui.ConfiguracoesActivity"
-            android:label="@string/label_configuracoes"></activity>
-        <activity android:name=".usuario.gui.tela_mostrar_nome"></activity>
+            android:label="@string/label_configuracoes">
+
+        </activity>
+        <activity android:name=".usuario.gui.tela_mostrar_nome" />
+
     </application>
 
 </manifest>
