--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
             android:name=".usuario.gui.EscolhaCadOuLoginActivity"
             android:label="@string/label_escolha" />
-        <activity android:name=".usuario.gui.tela_mostrar_nome"></activity>
+        <activity android:name=".usuario.gui.TelaInicialActivity"></activity>
     </application>
 
 </manifest>
