--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,11 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath =  true
+            }
+        }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -32,4 +37,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:palette-v7:27.1.1'
+    implementation 'org.parceler:parceler:1.0.4'
+    implementation 'org.parceler:parceler-api:1.0.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
