--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,11 @@
         <activity android:name=".usuario.gui.EscolhaConfiguracaoActivity" />
         <activity android:name=".usuario.gui.AlterarEmailActivity" />
         <activity android:name=".usuario.gui.AlterarSenhaActivity" />
-        <activity android:name=".titulos.gui.RecomendacoesActivity" />
-        <activity android:name=".titulos.gui.CalendarioActivity" />
+        <activity android:name=".titulo.gui.RecomendacoesActivity" />
+        <activity android:name=".titulo.gui.CalendarioActivity" />
         <activity android:name=".usuario.gui.DesativarContaActivity"></activity>
-        <activity android:name=".titulos.gui.TituloActivity"/>
-        <activity android:name=".titulos.gui.MainActivity"/>
+        <activity android:name=".titulo.gui.TituloActivity"/>
+        <activity android:name=".titulo.gui.MainActivity"/>
     </application>
 
 </manifest>
