--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,17 @@
             android:label="@string/label_escolha" />
         <activity android:name=".usuario.gui.TelaInicialActivity" />
         <activity android:name=".usuario.gui.EscolhaConfiguracaoActivity" />
-        <activity android:name=".usuario.gui.AlterarEmailActivity" />
-        <activity android:name=".usuario.gui.AlterarSenhaActivity" />
+        <activity android:name=".usuario.gui.AlterarEmailActivity"
+            android:label="@string/label_alterar_email"/>
+        <activity android:name=".usuario.gui.AlterarSenhaActivity"
+            android:label="@string/label_mudar_senha"/>
         <activity android:name=".titulo.gui.RecomendacoesActivity" />
         <activity android:name=".titulo.gui.CalendarioActivity" />
-        <activity android:name=".usuario.gui.DesativarContaActivity"></activity>
+        <activity android:name=".usuario.gui.DesativarContaActivity">
+        </activity>
         <activity android:name=".titulo.gui.TituloActivity"/>
-        <activity android:name=".titulo.gui.MainActivity"/>
+        <activity android:name=".titulo.gui.MainActivity"
+            android:label="@string/label_tela_inicial"/>
     </application>
 
 </manifest>
