--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.apphamba.hamba">
 
     <application
-        android:debuggable="true"
         android:name=".infra.HambaApp"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_logo_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_launcher_round"
@@ -34,9 +34,10 @@
         <activity android:name=".usuario.gui.AlterarSenhaActivity" />
         <activity android:name=".titulos.gui.RecomendacoesActivity" />
         <activity android:name=".titulos.gui.CalendarioActivity" />
-        <activity android:name=".usuario.gui.DesativarContaActivity"></activity>
-        <activity android:name=".titulos.gui.TituloActivity"/>
-        <activity android:name=".titulos.gui.MainActivity"/>
+        <activity android:name=".usuario.gui.DesativarContaActivity" />
+        <activity android:name=".titulos.gui.TituloActivity" />
+        <activity android:name=".titulos.gui.MainActivity" />
+        <activity android:name=".titulos.gui.DetalhesActivity"></activity>
     </application>
 
 </manifest>
