--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.apphamba.hamba">
 
     <application
-        android:debuggable="true"
         android:name=".infra.HambaApp"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/ic_logo_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_launcher_round"
@@ -30,17 +30,20 @@
             android:label="@string/label_escolha" />
         <activity android:name=".usuario.gui.TelaInicialActivity" />
         <activity android:name=".usuario.gui.EscolhaConfiguracaoActivity" />
-        <activity android:name=".usuario.gui.AlterarEmailActivity"
-            android:label="@string/label_alterar_email"/>
-        <activity android:name=".usuario.gui.AlterarSenhaActivity"
-            android:label="@string/label_mudar_senha"/>
+        <activity
+            android:name=".usuario.gui.AlterarEmailActivity"
+            android:label="@string/label_alterar_email" />
+        <activity
+            android:name=".usuario.gui.AlterarSenhaActivity"
+            android:label="@string/label_mudar_senha" />
         <activity android:name=".titulo.gui.RecomendacoesActivity" />
         <activity android:name=".titulo.gui.CalendarioActivity" />
-        <activity android:name=".usuario.gui.DesativarContaActivity">
-        </activity>
-        <activity android:name=".titulo.gui.TituloActivity"/>
-        <activity android:name=".titulo.gui.MainActivity"
-            android:label="@string/label_tela_inicial"/>
+        <activity android:name=".usuario.gui.DesativarContaActivity"></activity>
+        <activity android:name=".titulo.gui.TituloActivity" />
+        <activity
+            android:name=".titulo.gui.MainActivity"
+            android:label="@string/label_tela_inicial" />
+        <activity android:name=".titulo.gui.DetalhesActivity"></activity>
     </application>
 
 </manifest>
