Revert "Merge remote-tracking branch 'origin/EntregaMPOO' into bruno2"
This reverts commit 6766d7de384e6494e7b3dc6364edee7e9e5dd042, reversing
changes made to 8516d460e5af6fa8ad4c038515b9414d7290e3cc.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity
             android:name=".usuario.gui.EscolhaCadOuLoginActivity"
             android:label="@string/label_escolha" />
+        <activity android:name=".usuario.gui.TelaInicialActivity" />
         <activity android:name=".usuario.gui.EscolhaConfiguracaoActivity" />
         <activity
             android:name=".usuario.gui.AlterarEmailActivity"
