--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,18 @@
             android:label="@string/label_mudar_senha" />
         <activity android:name=".titulo.gui.RecomendacoesActivity" />
         <activity android:name=".titulo.gui.CalendarioActivity" />
-        <activity android:name=".usuario.gui.DesativarContaActivity"></activity>
+        <activity android:name=".usuario.gui.DesativarContaActivity" />
         <activity android:name=".titulo.gui.TituloActivity" />
         <activity
             android:name=".titulo.gui.MainActivity"
             android:label="@string/label_tela_inicial" />
-        <activity android:name=".titulo.gui.DetalhesActivity"></activity>
-        <activity android:name=".titulo.gui.FavoritosActivity"></activity>
+        <activity android:name=".titulo.gui.DetalhesActivity"
+            android:label="@string/label_tela_detalhes"/>
+        <activity android:name=".titulo.gui.FavoritosActivity"
+            android:label="@string/label_tela_favoritos"/>
+        <activity android:name=".titulo.gui.MeuHambaActivity"
+            android:label="@string/label_tela_meu_hamba">
+        </activity>
     </application>
 
 </manifest>
