--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:label="@string/label_tela_meu_hamba">
 
         </activity>
-        <activity android:name=".infra.EpisodiosListCheckActivity">
+        <activity android:name=".infra.adapter.EpisodiosCheckListaActivity">
 
         </activity>
     </application>
