--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'org.parceler:parceler:1.0.4'
     implementation 'org.parceler:parceler-api:1.0.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'me.relex:circleindicator:1.2.2@aar'
 }
