--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.0.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'me.relex:circleindicator:1.2.2@aar'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+
 }
