--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".infra.HambaApp"
@@ -63,6 +65,10 @@
             android:label="@string/label_checkbox_ep_assistidos">
 
         </activity>
+            android:label="@string/label_tela_meu_hamba" />
+        <activity android:name=".infra.adapter.EpisodiosCheckListaActivity" />
+        <activity android:name=".noticias.gui.NoticiasActivity" />
+        <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity"></activity>
     </application>
 
 </manifest>
