--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
 
         </activity>
             android:label="@string/label_tela_meu_hamba" />
-        <activity android:name=".infra.adapter.EpisodiosCheckListaActivity" />
+        <activity android:name=".infra.adaptersEFragmentos.noticiasAdapter.EpisodiosCheckListaActivity" />
         <activity android:name=".noticias.gui.NoticiasActivity" />
         <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity"></activity>
     </application>
