--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,6 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".infra.HambaApp"
@@ -62,13 +60,11 @@
 
         </activity>
         <activity android:name=".infra.adaptersEFragmentos.EpisodioCheck.EpisodioCheckNewActivity"
-            android:label="@string/label_checkbox_ep_assistidos">
+            android:label="@string/label_checkbox_ep_assistidos"/>
+        <activity android:name=".noticias.gui.NoticiasActivity" />
+        <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity">
 
         </activity>
-            android:label="@string/label_tela_meu_hamba" />
-        <activity android:name=".infra.adaptersEFragmentos.noticiasAdapter.EpisodiosCheckListaActivity" />
-        <activity android:name=".noticias.gui.NoticiasActivity" />
-        <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity"></activity>
     </application>
 
 </manifest>
