--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:label="@string/label_tela_meu_hamba">
 
         </activity>
-        <activity android:name=".infra.adaptersEFragmentos.EpisodioCheck.EpisodioCheckNewActivity"
+        <activity android:name=".infra.adaptersFragmentos.EpisodioCheck.EpisodioCheckNewActivity"
             android:label="@string/label_checkbox_ep_assistidos"/>
         <activity android:name=".noticias.gui.NoticiasActivity" />
         <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity">
