--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,12 @@
         <activity android:name=".noticias.gui.NoticiasActivity" />
         <activity android:name=".noticias.gui.DetalhesNoticiaAcitvity" />
         <activity android:name=".titulo.gui.AvaliacaoActivity" />
-        <activity android:name=".titulo.gui.RecomendacaoActivity"></activity>
+        <activity android:name=".titulo.gui.RecomendacaoActivity">
+
+        </activity>
+        <activity android:name=".titulo.gui.RecomendacoesActivity">
+
+        </activity>
     </application>
 
 </manifest>
